--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,10 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.11.2",
     "axios": "^1.13.5",
     "next": "16.1.6",
     "react": "19.2.3",
@@ -19,10 +19,12 @@
     "tailwindcss": "^3.4.19"
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^2.11.2",
     "@tailwindcss/postcss": "^4.1.18",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
     "autoprefixer": "^10.4.24",
     "babel-jest": "^30.2.0",
     "babel-plugin-react-compiler": "1.0.0",
@@ -30,6 +32,7 @@
     "eslint-config-next": "16.1.6",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
-    "postcss": "^8.5.6"
+    "postcss": "^8.5.6",
+    "whatwg-fetch": "^3.6.20"
   }
 }
